examples/test/testpolicy434.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy434
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key8: value45
      key15: value7
      key17: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value1
          key33: value39
      podSelector:
        matchLabels:
          key4: value45
          key10: value17
